--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ def playtikaTestcontainersVersion = '1.6'
 def jacocoVersion = '0.8.1'
 
 ext {
-    springCloudVersion = 'Finchley.M9'
+    springCloudVersion = 'Finchley.RELEASE'
 
     awsSdk = "com.amazonaws:aws-java-sdk:${awsSdkVersion}"
     jsonwebtoken = "io.jsonwebtoken:jjwt:${jsonWebTokenVersion}"
@@ -37,7 +37,7 @@ ext {
 
 buildscript {
     ext {
-        springBootVersion = '2.0.1.RELEASE'
+        springBootVersion = '2.0.3.RELEASE'
         palantirDockerPluginVersion = '0.19.2'
     }
 
