--- a/auth-server/src/main/resources/application.yml
+++ b/auth-server/src/main/resources/application.yml
@@ -16,6 +16,16 @@ spring:
           okta:
             client-id: 0oafhm4f7sJKqs8OR0h7
             client-secret: f0kGS5AWWA1XO9Y1d4JZfXoZe96X9N1LfJ321ide
+          keycloak:
+            client-id: glossary-web-client
+            client-secret: 7a687f5f-bfe2-40aa-ae61-834cdf6b4570
+            clientName: Keycloak
+            authorization-grant-type: authorization_code
+            redirectUriTemplate: '{baseUrl}/login/oauth2/code/{registrationId}'
+            scope:
+            - openid
+            - profile
+            - email
         provider:
           okta:
             authorization-uri: https://dev-709967.oktapreview.com/oauth2/v1/authorize
@@ -23,3 +33,9 @@ spring:
             user-info-uri: https://dev-709967.oktapreview.com/oauth2/v1/userinfo
             user-name-attribute: sub
             jwk-set-uri: https://dev-709967.oktapreview.com/oauth2/v1/keys
+          keycloak:
+            authorization-uri: http://localhost:8000/auth/realms/glossary/protocol/openid-connect/auth
+            token-uri: http://localhost:8000/auth/realms/glossary/protocol/openid-connect/token
+            user-info-uri: http://localhost:8000/auth/realms/glossary/protocol/openid-connect/userinfo
+            jwk-set-uri: http://localhost:8000/auth/realms/glossary/protocol/openid-connect/certs
+            user-name-attribute: preferred_username
