--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -5,18 +5,29 @@ sourceCompatibility = 9
 apply plugin: 'com.palantir.docker'
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-actuator')
-	compile('org.springframework.cloud:spring-cloud-starter-config')
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.cloud:spring-cloud-starter-config')
+    compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
+    compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+//    security
+    compile 'org.springframework.cloud:spring-cloud-starter-security'
+    compile 'org.springframework.cloud:spring-cloud-starter-oauth2'
+    compile 'org.springframework.security:spring-security-oauth2-client'
+    compile 'org.springframework.security:spring-security-oauth2-jose'
+
+    compile jaxbApi // should be included as external dependency because of java 9
+    compile jaxbCore// should be included as external dependency because of java 9
+    compile jaxbImpl// should be included as external dependency because of java 9
+    compile activation// should be included as external dependency because of java 9
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 docker {
-	name "solomkinmv/${bootJar.baseName}"
-	tags project.version
-	println "==> Docker task for ${name}"
-	files bootJar.archivePath
-	buildArgs(['JAR_FILE': "${bootJar.archiveName}"])
+    name "solomkinmv/${bootJar.baseName}"
+    tags project.version
+    println "==> Docker task for ${name}"
+    files bootJar.archivePath
+    buildArgs(['JAR_FILE': "${bootJar.archiveName}"])
 }
